--- a/research.html
+++ b/research.html
@@ -614,25 +614,9 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </p>
 </li>
 </ul>
-  
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4722923"> "A General Framework for Robust Individualized Decision Learning with Sensitive Variables,"</a> with X. Tan, Z. Qi, and L. Tang, Submitted <br />
-</div>
-</p>
-</li>
-</ul>
 
 <ul>
 <li><p><a href="">"Domain Adaptation for Retail Demand Prediction,"</a> with N. Tarighat and J. Clark, Submitted <br />
-</div>
-</p>
-</li>
-</ul>
-  
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Working paper <br />
-Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
-Finalist in the 2024 INFORMS TIMES Best Working Paper Competition <br />
 </div>
 </p>
 </li>
@@ -648,7 +632,23 @@ Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100842">"Offline-Online Retail Collaboration via Pickup Partnership,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Working paper <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100842">"Offline-Online Retail Collaboration via Pickup Partnership,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br /> 
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Working paper <br />
+Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
+Finalist in the 2024 INFORMS TIMES Best Working Paper Competition <br />
+</div>
+</p>
+</li>
+</ul>
+  
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4722923"> "A General Framework for Robust Individualized Decision Learning with Sensitive Variables,"</a> with X. Tan, Z. Qi, and L. Tang, Working paper <br />
 </div>
 </p>
 </li>
