--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@ Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> 
 Advisor or investor for startups: <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://crownsync.ai/"</a>CrownSync AI</a>, <a href="https://www.bluequbit.io/"</a>BlueQubit</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.supplyve.com/"</a>Supplyve</a>, <a href="https://www.scribemd.ai/"</a>ScribeMD</a> <br />
 <br />
 <b>Books:<br />
-</b> <a href=""</a>"Pricing in the Age of AI,"</a> <b>MIT Press</b> Forthcoming 2026 </b><font color="red">NEW</font></b>
+</b> <a href=""</a>"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 -- </b><font color="red">NEW</font></b>
+<br />
+<br />
+</b> <a href=""</a>"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b> (co-editor), Forthcoming 2025 -- </b><font color="red">NEW</font></b>
 <br />
 <br />
 </b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)<br />
@@ -72,7 +75,7 @@ Barnes & Noble</a>,
 Browns Books</a>
 <br />
 <br />
-</b> <a href="https://utorontopress.com/9781487542719/precision-retailing/"</a>"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2024 (ISBN 978-1487542719)<br />
+</b> <a href="https://utorontopress.com/9781487542719/precision-retailing/"</a>"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>(co-editor), 2024 (ISBN 978-1487542719)<br />
 Buy the book: 
 <a href="https://www.amazon.com/Precision-Retailing-Behavioral-Behaviorally-Organizations/dp/1487542712/ref=sr_1_1?keywords=precision+retailing&qid=1680526424&s=books&sr=1-1">
 Amazon.com</a>, 
