--- a/students.html
+++ b/students.html
@@ -102,7 +102,7 @@
 
 <li><p>Shuo Yang (2024) - McGill UG Student in Economics</p> 
     
-<li><p>Ken Lee - M.S. in Computer Science at McGill (co-advisor with Derek Nowrouzezahrai)</p> 
+<li><p>Ken Lee (2025) - M.S. in Computer Science at McGill (co-advisor with Derek Nowrouzezahrai)</p> 
 
 <li><p>Tony Xu - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>  
 
