--- a/teaching.html
+++ b/teaching.html
@@ -155,7 +155,7 @@ Featured as a content piece on the <a href="https://community.tableau.com/s/feed
 </ul>
   
 <ul>
-<li><p><b><a href="https://maxccohen.github.io/Intelligems-Case-Study-Pricing.pdf">Case Study: "Intelligems: Pricing in the Online World,"</a></b> with U. Ahmad and S. Jagabathula, 2022
+<li><p><b><a href="https://maxccohen.github.io/Intelligems-Case-Study-Pricing.pdf">Case Study: "Intelligems: Pricing in the Online World,"</a></b> with U. Ahmad, D. Guetta, and S. Jagabathula, 2025
 </p>
 </li>
 </ul>
