--- a/research.html
+++ b/research.html
@@ -646,6 +646,13 @@ Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 </ul>
 
 <ul>
+<li><p><a href="">"Generative AI Models for Images with Copyright-Free Training,"</a> with T. Xu and J. Clark, Submitted <br /> 
+</div>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Working paper <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 Finalist in the 2024 INFORMS TIMES Best Working Paper Competition <br />
