--- a/students.html
+++ b/students.html
@@ -58,7 +58,7 @@
   
 <li><p>Sandeep Chitla (2025) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula)</p>
   
-<li><p>Nymisha Bandi (2025) - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
+<li><p>Nymisha Bandi (2025) - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray). First position: Assistant Professor of Analytics at Stony Brook University, College of Business</p>
 
 <li><p>Mehran Poursoltani (2025) – Postdoctoral fellow at McGill</p>
     
