--- a/students.html
+++ b/students.html
@@ -56,7 +56,7 @@
   
 <li><p>Doehun Kim (2025) – Postdoctoral fellow at McGill (co-advisor with Warut Khern-am-nuai). First position: Assistant Professor of Information Systems at Florida Atlantic University</p>
   
-<li><p>Sandeep Chitla (2025) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula)</p>
+<li><p>Sandeep Chitla (2025) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula). First position: Postdoctoral Researcher at Cornell University</p>
   
 <li><p>Nymisha Bandi (2025) - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray). First position: Assistant Professor of Analytics at Stony Brook University, College of Business</p>
 
