--- a/research.html
+++ b/research.html
@@ -646,7 +646,7 @@ Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 </ul>
 
 <ul>
-<li><p><a href="">"Generative AI Models for Images with Copyright-Free Training,"</a> with T. Xu and J. Clark, Submitted <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5331280">"Generative AI Models for Images with Copyright-Free Training,"</a> with T. Xu and J. Clark, Submitted <br /> 
 </div>
 </p>
 </li>
