--- a/teaching.html
+++ b/teaching.html
@@ -113,7 +113,7 @@ Course in the M.S. in Business Analytics program - 61 students
 <h2>Case Studies</h2>
   
 <ul>
-<li><p><b><a href="https://www8.gsb.columbia.edu/caseworks/node/674">Case Study: "Supply Chain Coordination and Contracts in the Sharing Economy - a Case Study at Cargo,"</a></b> with C. D. Guetta and W. Xiao<br />
+<li><p><b><a href="https://caseworks.business.columbia.edu/caseworks/supply-chain-coordination-and-contracts-sharing-economy-case-study-cargo">Case Study: "Supply Chain Coordination and Contracts in the Sharing Economy - a Case Study at Cargo,"</a></b> with C. D. Guetta and W. Xiao<br />
 Columbia CaseWorks 180203, April 2018. Available through <a href="https://hbsp.harvard.edu/product/CU215-PDF-ENG">Harvard Business Publishing</a> <br />
 First Place in the 2018 <b>INFORMS Case Competition</b> <br />
 </p>
@@ -155,7 +155,8 @@ Featured as a content piece on the <a href="https://community.tableau.com/s/feed
 </ul>
   
 <ul>
-<li><p><b><a href="https://maxccohen.github.io/Intelligems-Case-Study-Pricing.pdf">Case Study: "Intelligems: Pricing in the Online World,"</a></b> with U. Ahmad, D. Guetta, and S. Jagabathula, 2025
+<li><p><b><a href="https://caseworks.business.columbia.edu/caseworks/intelligems-pricing-online-world">Case Study: "Intelligems: Pricing in the Online World,"</a></b> with U. Ahmad, D. Guetta, and S. Jagabathula<br /> 
+Columbia CaseWorks 250206, June 2025
 </p>
 </li>
 </ul>
