--- a/research.html
+++ b/research.html
@@ -595,7 +595,7 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4764418"> "Generative AI and Price Discrimination in the Housing Market,"</a> with J. Tanlamai and W. Khern-am-nuai, Major Revision in <b>Information Systems Research</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4764418"> "Generative AI and Price Discrimination in the Housing Market,"</a> with J. Tanlamai and W. Khern-am-nuai, Second Major Revision in <b>Information Systems Research</b> <br />
 </div>
 </p>
 </li>
