--- a/grants.html
+++ b/grants.html
@@ -32,6 +32,8 @@
 <h3>Grants</h3>
 <ul>
 
+<li><p>2025-2031: SSHRC Insight Grant: AI Generated Content and the Future of Online Platforms - $143,510; Role: Co-applicant (with W. Khern-am-nuai and A. Pinsonneault)</p>
+
 <li><p>2024-2030: SSHRC Insight Grant: The Future of Artificial Intelligence as a Service: Implications for Corporate Governance and AI Regulation - $90,148; Role: Collaborator (with M. Petrin, S. Dahan, and D. Gindis)</p>
 
 <li><p>2023-2027: NSF-China: Resilient Operations of Urban Lifeline Systems Under Information Insufficiency - 2 million RMB; Role: Co-applicant (with W. Qi, S. Liu, Y. Liang, L. Yu, X. Duan, J. Zhang, Y. Li, Z. Jiang, and X. Zhang)</p>
