--- a/research.html
+++ b/research.html
@@ -369,7 +369,7 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ol>
 
 <ol start="33">
-<li><p><a href="https://journals.sagepub.com/doi/10.1177/10591478241310217">"When Platforms Go Public, Standards Drop,"</a> with G. Lapierre-Berger and J. C. Serpa, Forthcoming in <b>Production and Operations Management</b> <br />
+<li><p><a href="https://journals.sagepub.com/doi/10.1177/10591478241310217">"When Platforms Go Public, Standards Drop,"</a> with G. Lapierre-Berger and J. Puyana-Bastin, <b>Production and Operations Management</b>, 34(8):2083–2103, 2025 <br />
 </div>
 </p>
 </li>
