--- a/research.html
+++ b/research.html
@@ -658,6 +658,14 @@ Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5353923">"Generative AI for Data Scraping,"</a> with E. Hage-Youssef, Submitted <br /> 
+<a href="https://genai-for-data-scraping.onrender.com/">Companion online platform</a> <br />
+</div>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Working paper <br />
