--- a/research.html
+++ b/research.html
@@ -662,6 +662,7 @@ Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5353923">"Generative AI for Data Scraping,"</a> with E. Hage-Youssef, Submitted <br /> 
 <a href="https://genai-for-data-scraping.onrender.com/">Companion online platform</a> <br />
+Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scraping-insider-3">Web Scraping Insider</a> <br />
 </div>
 </p>
 </li>
