--- a/students.html
+++ b/students.html
@@ -61,8 +61,12 @@
 <li><p>Nymisha Bandi (2025) - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray). First position: Assistant Professor of Analytics at Stony Brook University, College of Business</p>
 
 <li><p>Mehran Poursoltani (2025) – Postdoctoral fellow at McGill</p>
+
+<li><p>Jitsama Tanlamai – IS Ph.D. student at McGill Desautels (advisor: Warut Khern-am-nuai)</p>
     
 <li><p>Liting Chen – OM Ph.D. student at McGill Desautels (co-advisor with Sentao Miao)</p>
+  
+<li><p>Zhihao Yao – OM Ph.D. student at McGill Desautels (co-advisor with Daniel Ding)</p> 
   
 <li><p>Thesis committee: Claudio Sole (Polytechnique Montréal), Mehran Poursoltani (HEC Montréal), Recep Bekci (McGill), Yang Chen (Queen's University)</p>
 
