--- a/students.html
+++ b/students.html
@@ -112,6 +112,7 @@
 
 <li><p>Eddy Hage-Youssef - McGill UG Student in Computer Science</p>  
 
+<li><p>Chenye Peng - Visiting UG Student, Statistics at Fudan University</p>  
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
 </div>
