--- a/research.html
+++ b/research.html
@@ -408,7 +408,7 @@ Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensur
 </ol>
 
 <ol start="38">
-<li><p><a href="">"Domain Adaptation for Retail Demand Prediction,"</a> with N. Tarighat and J. Clark, Forthcoming in <b>IEEE Access</b> <br />
+<li><p><a href="https://ieeexplore.ieee.org/document/11129680">"Domain Adaptation for Retail Demand Prediction,"</a> with N. Tarighat and J. Clark, Forthcoming in <b>IEEE Access</b> <br />
 </div>
 </p>
 </li>
