--- a/research.html
+++ b/research.html
@@ -616,6 +616,13 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5404966">"When AI Sets Wages: Biases and Labor Discrimination in Generative Pricing,"</a> with E. Hage-Youssef and W. Khern-am-nuai, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5246862">"Targeted Alerts to Improve Road Safety,"</a> with P. Adjiman, D. Melul Fresco, A. Jacquillat, and R. Sasson, Submitted <br />
 </div>
 </p>
