--- a/research.html
+++ b/research.html
@@ -545,7 +545,7 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 </ol>
 
 <ol start="56">
-<li><p> M. C. Cohen, <a href="">"Pricing in the Age of AI,"</a> <b>MIT Press</b> Forthcoming 2026 - </b><font color="red">NEW</font></b>
+<li><p> 55.	M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
 </div>
 </p>
 </li>
