--- a/research.html
+++ b/research.html
@@ -531,21 +531,21 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 <h3>Books and Book Chapters</h3>
 
 <ol start="54">
-<li><p> M. C. Cohen, <a href="">"Pricing in the Age of AI,"</a> <b>MIT Press</b> Forthcoming 2026 - </b><font color="red">NEW</font></b>
+<li><p> M. C. Cohen, <a href="">"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 - </b><font color="red">NEW</font></b>
 </div>
 </p>
 </li>
 </ol>
   
 <ol start="55">
-<li><p> M. C. Cohen, T. Dai (Eds), <a href="">"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b> Forthcoming 2025 (ISBN 978-3032070531) - </b><font color="red">NEW</font></b>
+<li><p> M. C. Cohen, T. Dai (Eds), <a href="">"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b>, Forthcoming 2025 (ISBN 978-3032070531) - </b><font color="red">NEW</font></b>
 </div>
 </p>
 </li>
 </ol>
 
 <ol start="56">
-<li><p> 55.	M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
+<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
 </div>
 </p>
 </li>
