--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Advisor or investor for startups: <a href="https://www.intelligems.io/"</a>Intel
 </b> <a href=""</a>"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 - </b><font color="red">NEW</font></b>
 <br />
 <br />
-</b> <a href=""</a>"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b> (co-editor), Forthcoming 2025 (ISBN 978-3032070531) - </b><font color="red">NEW</font></b>
+</b> <a href="https://link.springer.com/book/9783032070531"</a>"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b> (co-editor), Forthcoming 2025 (ISBN 978-3032070531) - </b><font color="red">NEW</font></b>
 <br />
 <br />
 </b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)<br />
