--- a/awards.html
+++ b/awards.html
@@ -32,6 +32,8 @@
 <h3>Awards</h3>
 <ul>
 
+<li><p>2025: Finalist in the INFORMS Service Science Best Student Paper Award</p>
+  
 <li><p>2025: Finalist in the INFORMS MIF Paper Competition</p>
     
 <li><p>2025: Master of Management Teaching Award at Desautels Faculty of Management, McGill University</p>
