--- a/awards.html
+++ b/awards.html
@@ -32,7 +32,7 @@
 <h3>Awards</h3>
 <ul>
 
-<li><p>2025: Finalist in the INFORMS Service Science Best Student Paper Award</p>
+<li><p>2025: Finalist in the INFORMS Service Science Best Student Paper Award (student: Nymisha Bandi)</p>
   
 <li><p>2025: Finalist in the INFORMS MIF Paper Competition</p>
     
