--- a/teaching.html
+++ b/teaching.html
@@ -33,6 +33,13 @@
 <h2>Teaching Experience</h2>
 
 <ul>
+<li><p><b><a href="">International Masters for Health Leadership (IMHL) and Graduate Certificate in Healthcare Management (GCHM), McGill University - 2023-2025 </a></b><br />
+AI for Healthcare Course
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><b><a href="">ISCAE-McGill Mini MBA, McGill University Executive Institute - 2023-2024 </a></b><br />
 Data-Driven Decision Making
 </p>
@@ -55,7 +62,7 @@ Analytics & AI module for Advanced Management Course
 </ul>
   
 <ul>
-<li><p><b><a href="">Retail Executive Eduction, McGill University BSRM - 2022 & 2024 </a></b><br />
+<li><p><b><a href="">Retail Executive Eduction, McGill University BSRM - 2022-2025 </a></b><br />
 Excelling in the New World of Retail - Module on Data Analytics & Decision Making
 </p>
 </li>
