--- a/research.html
+++ b/research.html
@@ -600,7 +600,7 @@ First price at the 2007 Technion Creativity in Science and Technology competitio
 <h3>Under Review and Working Papers</h3>
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591826">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591826">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, 2nd Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper Competition<br />
 </div>
@@ -609,7 +609,7 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5410302">"Bridging Listeners with Artists: Deep Multi-Objective Multi-Stakeholder Music Recommendations,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Major Revision in <b>Management Science</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5410302">"Bridging Listeners with Artists: Deep Multi-Objective Multi-Stakeholder Music Recommendations,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, 2nd Major Revision in <b>Management Science</b> <br />
 </div>
 </p>
 </li>
@@ -623,7 +623,7 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4764418"> "Generative AI and Price Discrimination in the Housing Market,"</a> with J. Tanlamai and W. Khern-am-nuai, Second Major Revision in <b>Information Systems Research</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4764418"> "Generative AI and Price Discrimination in the Housing Market,"</a> with J. Tanlamai and W. Khern-am-nuai, 2nd Major Revision in <b>Information Systems Research</b> <br />
 </div>
 </p>
 </li>
