--- a/research.html
+++ b/research.html
@@ -637,6 +637,15 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5353923">"Generative AI for Data Scraping,"</a> with E. Hage-Youssef, Major Revision in <b>INFORMS Journal on Data Science</b> <br /> 
+<a href="https://genai-for-data-scraping.onrender.com/">Companion online platform</a> <br />
+Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scraping-insider-3">Web Scraping Insider</a> <br />
+</div>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5404966">"When AI Sets Wages: Biases and Labor Discrimination in Generative Pricing,"</a> with E. Hage-Youssef and W. Khern-am-nuai, Submitted <br />
 </div>
 </p>
@@ -682,15 +691,6 @@ Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5331280">"Generative AI Models for Images with Copyright-Free Training,"</a> with T. Xu and J. Clark, Submitted <br /> 
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5353923">"Generative AI for Data Scraping,"</a> with E. Hage-Youssef, Submitted <br /> 
-<a href="https://genai-for-data-scraping.onrender.com/">Companion online platform</a> <br />
-Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scraping-insider-3">Web Scraping Insider</a> <br />
 </div>
 </p>
 </li>
