--- a/research.html
+++ b/research.html
@@ -376,8 +376,8 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ol>
 
 <ol start="34">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591114">"Revisiting the CEO Effect Through a Machine Learning Lens,"</a> with H. Shimao, S. J. Kim, and W. Khern-am-nuai, Forthcoming in <b>Management Science</b> <br />
-Accepted to the <b>Fast Track</b> publication process <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591114">"Revisiting the CEO Effect Through a Machine Learning Lens,"</a> with H. Shimao, S. J. Kim, and W. Khern-am-nuai, <b>Management Science</b>, 71(6): 4533-5418, 2025 <br />
+Accepted to the <b>Fast Track</b> process <br />
 </div>
 </p>
 </li>
