--- a/research.html
+++ b/research.html
@@ -401,7 +401,7 @@ Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensur
 </ol>
 
 <ol start="37">
-<li><p><a href="https://authors.elsevier.com/sd/article/S0166-0462(25)00044-4">"Urban Pull: The Roles of Amenities and Employment,"</a> with N. Hausman, P. Samuels, and R. Sasson, Forthcoming in <b>Regional Science and Urban Economics</b> <br />
+<li><p><a href="https://authors.elsevier.com/sd/article/S0166-0462(25)00044-4">"Urban Pull: The Roles of Amenities and Employment,"</a> with N. Hausman, P. Samuels, and R. Sasson, <b>Regional Science and Urban Economics</b>, 114:104127, 2025 <br />
 </div>
 </p>
 </li>
