--- a/research.html
+++ b/research.html
@@ -630,7 +630,7 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4914875"> "Parking at the Right Spot: Crowdsourcing-Based Promotions for Electric Scooters,"</a> with D. Kim, Y. Son, and W. Khern-am-nuai, Major Revision in <b>Information Systems Research</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4914875"> "Parking at the Right Spot: Repositioning-Based Promotions for E-Scooters,"</a> with D. Kim, Y. Son, and W. Khern-am-nuai, Major Revision in <b>Information Systems Research</b> <br />
 </div>
 </p>
 </li>
