--- a/research.html
+++ b/research.html
@@ -607,7 +607,7 @@ First price at the 2007 Technion Creativity in Science and Technology competitio
 <h3>Under Review and Working Papers</h3>
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591826">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, 2nd Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591826">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Minor Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper Competition<br />
 </div>
