--- a/research.html
+++ b/research.html
@@ -651,6 +651,13 @@ Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scr
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100842">"Offline-Online Retail Collaboration via Pickup Partnership,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Minor Revision in <b>Service Science</b> <br /> 
+</div>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5404966">"When AI Sets Wages: Biases and Labor Discrimination in Generative Pricing,"</a> with E. Hage-Youssef and W. Khern-am-nuai, Submitted <br />
@@ -683,14 +690,6 @@ Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scr
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Revisiting the Eye-Level Effect: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br />
 Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
-</div>
-</p>
-</li>
-</ul>
-
-  
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100842">"Offline-Online Retail Collaboration via Pickup Partnership,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br /> 
 </div>
 </p>
 </li>
