--- a/awards.html
+++ b/awards.html
@@ -32,6 +32,8 @@
 <h3>Awards</h3>
 <ul>
 
+<li><p>2025: INFORMS Revenue Management and Pricing Section Prize</p>
+    
 <li><p>2025: Top 2% of most cited authors in 2025 in both Business & Management and Operations Research</p>
   
 <li><p>2025: Finalist in the INFORMS Service Science Best Student Paper Award (student: Nymisha Bandi)</p>
