--- a/research.html
+++ b/research.html
@@ -236,6 +236,7 @@ Finalist in the 2021 M&SOM Practice-Based Research Competition <br />
 <a href="https://maxccohen.github.io/Pricing-Fairness-Appendix.pdf">Online Appendix</a> <br />
 <a href="https://www.informs.org/Blogs/ManSci-Blogs/Management-Science-Review/Pricing-with-Fairness">Management Science Review</a> <br />
 Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and to the 2020 Workshop on Mechanism Design for Social Good <br />
+Winner of the 2025 INFORMS Revenue Management and Pricing Section Prize <br />
 </div>
 </p>
 </li>
