--- a/research.html
+++ b/research.html
@@ -645,6 +645,13 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5331280">"Generative AI Models for Images with Copyright-Free Training,"</a> with T. Xu and J. Clark, Major Revision in <b>Operations Research</b> <br /> 
+</div>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5353923">"Generative AI for Data Scraping,"</a> with E. Hage-Youssef, Major Revision in <b>INFORMS Journal on Data Science</b> <br /> 
 <a href="https://genai-for-data-scraping.onrender.com/">Companion online platform</a> <br />
 Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scraping-insider-3">Web Scraping Insider</a> <br />
@@ -691,13 +698,6 @@ Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scr
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Revisiting the Eye-Level Effect: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br />
 Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5331280">"Generative AI Models for Images with Copyright-Free Training,"</a> with T. Xu and J. Clark, Submitted <br /> 
 </div>
 </p>
 </li>
