--- a/research.html
+++ b/research.html
@@ -546,14 +546,14 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 <h3>Books and Book Chapters</h3>
 
 <ol start="56">
-<li><p> M. C. Cohen, <a href="">"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026
+<li><p> M. C. Cohen, <a href="">"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 (ISBN 978-0262056779)
 </div>
 </p>
 </li>
 </ol>
   
 <ol start="57">
-<li><p> M. C. Cohen, T. Dai (Eds), <a href="https://link.springer.com/book/9783032070531">"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b>, Forthcoming 2025 (ISBN 978-3032070531)
+<li><p> M. C. Cohen, T. Dai (Eds), <a href="https://link.springer.com/book/9783032070531">"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b>, Forthcoming 2026 (ISBN 978-3032070531)
 </div>
 </p>
 </li>
