--- a/research.html
+++ b/research.html
@@ -519,32 +519,32 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 </p>
 </li>
 </ol>
+
+<ol start="53">
+<li><p><a href="">"Generative AI for Pricing,"</a> <b>MIT Sloan Management Review</b>, Forthcoming <br />
+</div>
+</p>
+</li>
+</ol>
   
 <h3>White Papers</h3>
 
-<ol start="53">
+<ol start="54">
 <li><p><a href="https://maxccohen.github.io/AI-Medical-Scribes.pdf"> "AI Medical Scribes: A Revolution in Healthcare Documentation,"</a> <b>the AI Medical Scribe White Paper</b>, with E. Toubiana, July 2024 <br />
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="54">
+<ol start="55">
 <li><p><a href="https://aiisgoodforus.com/"> "AI: What Is It and Why Is It Good for Us and for Society?"</a> <b>the AI Is Good for Us White Paper</b>, available at <a href="https://aiisgoodforus.com/"> www.AIisGoodforUs.com</a>, September 2024 <br />
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="55">
-<li><p><a href="https://www.analysisgroup.com/globalassets/insights/publishing/2025_digital_disruption_in_news_media.pdf"> "Digital Disruption in News Media: Evaluating the Canadian Online News Act,"</a> <b>the Online News Act White Paper</b>, January 2025 <br />
-</div>
-</p>
-</li>
-</ol>
-
 <ol start="56">
-<li><p><a href="">"Generative AI for Pricing,"</a>, <b>MIT Sloan Management Review</b>, Forthcoming <br />
+<li><p><a href="https://www.analysisgroup.com/globalassets/insights/publishing/2025_digital_disruption_in_news_media.pdf"> "Digital Disruption in News Media: Evaluating the Canadian Online News Act,"</a> <b>the Online News Act White Paper</b>, January 2025 <br />
 </div>
 </p>
 </li>
