--- a/research.html
+++ b/research.html
@@ -673,6 +673,13 @@ Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scr
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5792542">"Supply Chain Management in the AI Era: A Vision Statement from the Operations Management Community,"</a> with T. Dai, G. Perakis, and 39 others, Submitted <br /> 
+</div>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5404966">"When AI Sets Wages: Biases and Labor Discrimination in Generative Pricing,"</a> with E. Hage-Youssef and W. Khern-am-nuai, Submitted <br />
