--- a/research.html
+++ b/research.html
@@ -500,7 +500,7 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 </ol>
 
 <ol start="50">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5380553">"The Impact of AI on Competition Across Business Functions,"</a> with D. Sokol, <b>Management and Business Review</b>, Forthcoming <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5380553">"The Impact of AI on Competition Across Business Functions,"</a> with D. Sokol, <b>Management and Business Review</b>, 5(4):7-14, Fall 2025 Issue <br />
 </div>
 </p>
 </li>
