--- a/research.html
+++ b/research.html
@@ -528,7 +528,7 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 </ol>
 
 <ol start="54">
-<li><p><a href="">"How AI Is Reshaping Pricing Litigation,"</a> <b>ABA Antitrust Magazine</b>, Forthcoming <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5907105">"How AI Is Reshaping Pricing Litigation,"</a> <b>ABA Antitrust Magazine</b>, Forthcoming <br />
 </div>
 </p>
 </li>
