--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Associate Academic Member, <a href="https://mila.quebec/en"</a>Mila</a> <br />
 Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> and <a href="https://www.gerad.ca/en"</a> GERAD </a> <br />
 Visiting Professor and Shubik Fellow, <a href="https://som.yale.edu/faculty-research/faculty-directory/maxime-cohen"</a> Yale School of Management</a>, <a href="https://www.yale.edu/"</a>Yale University</a> (2023-2024)<br />
 <br />
-<b>Chief of AI Strategy</b> @<a href="https://www.ciussswestcentral.ca/"</a> CIUSSS West-Central Montreal (Jewish General Hospital) </a> <br />
+<b>Chief AI Scientist</b> @<a href="https://www.ciussswestcentral.ca/"</a> CIUSSS West-Central Montreal (Jewish General Hospital) </a> <br />
 Director of Artificial Intelligence @<a href="https://integral.partners/"</a> Intégral </a> <br />
 Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> IVADO Labs </a> <br />
 Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> <br />
@@ -57,7 +57,7 @@ Advisor or investor for startups: <a href="https://www.intelligems.io/"</a>Intel
 </b> <a href=""</a>"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 (ISBN 978-0262056779) - </b><font color="red">NEW</font></b>
 <br />
 <br />
-</b> <a href="https://link.springer.com/book/9783032070531"</a>"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b> (co-editor), Forthcoming 2026 (ISBN 978-3032070531) - </b><font color="red">NEW</font></b>
+</b> <a href="https://link.springer.com/book/9783032070531"</a>"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b> (co-editor) Series in Supply Chain Management 27, 2026 (ISBN 978-3032070531) - </b><font color="red">NEW</font></b>
 <br />
 <br />
 </b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)<br />
@@ -118,8 +118,8 @@ Browns Books</a>
 
 <h2>About</h2>
  <p class="p2"><span>
-I am the Scale AI Chair Professor and the Academic Director of the Bensadoun School of Retail Management at <a href="https://www.mcgill.ca/"</a> McGill University</a>. I am the Chief of AI Strategy of the <a href="https://www.ciussswestcentral.ca"</a> CIUSSS West-Central Montreal (Jewish General Hospital) </a> and the Scientific Director of the non-profit <a href="https://myopencourt.org/"</a> MyOpenCourt.org</a>.
- I am also a Scientific Advisor in AI at <a href="https://ivadolabs.com/"</a>IVADO Labs</a>, and I am actively advising corporations, retailers, and startups on topics related to <b>pricing, retail, and data science</b>.  
+I am the Scale AI Chair Professor and the Academic Director of the Bensadoun School of Retail Management at <a href="https://www.mcgill.ca/"</a> McGill University</a>. I am the Chief AI Scientist of the <a href="https://www.ciussswestcentral.ca"</a> CIUSSS West-Central Montreal (Jewish General Hospital) </a> and the Scientific Director of the non-profit <a href="https://myopencourt.org/"</a> MyOpenCourt.org</a>.
+ I am also a Scientific Advisor in AI at <a href="https://ivadolabs.com/"</a>IVADO Labs</a>, and I am actively advising corporations, retailers, and startups on topics related to <b>AI, pricing, retail, and data science</b>.  
  Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
  at <a href="http://www.stern.nyu.edu/"</a> NYU Stern</a> and a Research Scientist at <a href="https://ai.google/">Google AI</a>. 
  I previously worked as a high-frequency trader and co-founded a real estate investment company.
