--- a/workEx.html
+++ b/workEx.html
@@ -55,11 +55,18 @@ Member of GERAD - Group for Research in Decision Analysis
  
 <ul>
 <li><p><b><a href="#">CIUSSS West-Central Montreal (Jewish General Hospital), Montreal, Canada (2024-present)</a></b><br />
-<b>Chief of AI Strategy</b>
+<b>Chief AI Scientist</b>
 </p>
 </li>
 </ul>
- 
+
+<ul>
+<li><p><b><a href="#">Leger, Montreal, Canada (2026-present)</a></b><br />
+<b>Member of Leger AI Expert Committee</b>
+</p>
+</li>
+</ul>
+  
 <ul>
 <li><p><b><a href="#">Intégral, Montreal, Canada (2023-present)</a></b><br />
 <b>Director of Artificial Intelligence</b>
@@ -74,6 +81,13 @@ Member of GERAD - Group for Research in Decision Analysis
 </li>
 </ul>
 
+<ul>
+<li><p><b><a href="#">Production and Operations Management, U.S. (2026-present)</a></b><br />
+<b>VP of Publications</b>
+</p>
+</li>
+</ul>
+  
 <ul>
 <li><p><b><a href="#">ELNA Medical, Montreal, Canada (2022-2024)</a></b><br />
 <b>Chief AI Officer</b>
