--- a/research.html
+++ b/research.html
@@ -626,6 +626,13 @@ First price at the 2007 Technion Creativity in Science and Technology competitio
 </li>
 </ol>
 
+<ol start="67">
+<li><p><a href="">"Modelling Customer Trajectories with Reinforcement Learning for Practical Retail Insights,"</a> with K. M. Lee, P. Barde, and D. Nowrouzezahrai, Proc. of the 25th International Conference on Autonomous Agents and Multiagent Systems, 2026 <br />
+</div>
+</p>
+</li>
+</ol>
+  
 <h3>Under Review and Working Papers</h3>
   
 <ul>
