--- a/research.html
+++ b/research.html
@@ -521,7 +521,7 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 </ol>
 
 <ol start="53">
-<li><p><a href="">"Generative AI for Pricing,"</a> <b>MIT Sloan Management Review</b>, Forthcoming <br />
+<li><p><a href="">"How to Use Generative AI for Pricing,"</a> <b>MIT Sloan Management Review</b>, Forthcoming <br />
 </div>
 </p>
 </li>
