--- a/research.html
+++ b/research.html
@@ -731,7 +731,7 @@ Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scr
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Revisiting the Eye-Level Effect: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Revisiting the Eye-Level Effect,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br />
 Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 </div>
 </p>
