--- a/research.html
+++ b/research.html
@@ -798,6 +798,21 @@ First Place in the 2015 Best Student Paper POM Supply Chain <br />
 
 -->
 
+<h3>Reflections</h3>
+
+<ul>
+<li><p><a href="https://maxccohen.github.io/Reflection-Teaching.pdf">"Eight Years of Business School Teaching: Personal Reflection and 47 Pieces of Advice,"</a> January 2025 <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://maxccohen.github.io/Double-Academic-Career.pdf">"Reflection on the Double Academic Career,"</a> January 2026 <br />
+</div>
+</p>
+</li>
+</ul>
 
 <h3>Theses</h3>
 
