--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> and <a href="https:
 Visiting Professor and Shubik Fellow, <a href="https://som.yale.edu/faculty-research/faculty-directory/maxime-cohen"</a> Yale School of Management</a>, <a href="https://www.yale.edu/"</a>Yale University</a> (2023-2024)<br />
 <br />
 <b>Chief AI Scientist</b> @<a href="https://www.ciussswestcentral.ca/"</a> CIUSSS West-Central Montreal (Jewish General Hospital) </a> <br />
-Member of @<a href="https://leger360.com/"</a> Leger </a> AI Expert Committee <br />
+Member of AI Expert Committee @<a href="https://leger360.com/"</a> Leger </a> <br />
 Director of Artificial Intelligence @<a href="https://integral.partners/"</a> Intégral </a> <br />
 Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> IVADO Labs </a> <br />
 Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> <br />
