--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@
 </div>
 <h3>In the News</h3>
 
-</b><font color="red">I stopped updating this list since 2024</font></b> <br />
+</b><font color="red">I stopped updating this list since 2024</font></b> <br /> <br />
 <ul>  
 <li><p><a href="https://www.ledevoir.com/opinion/idees/806309/idees-ayons-pas-peur-potentiel-ia">N’ayons pas peur du potentiel de l’IA!</a> (in French), Le Devoir, January 2024</p>  
     
