--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ My research and teaching have received 40+ awards, including <a href="https://po
 <p>VP of Publications for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2026-present)
 <p>Founding Department Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> – AI in Operations Department (2026-present) 
 <p>Department Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> – Service Operations Department (2022-present)
-<p>Special Issue Editor for MBR on “Competition and Regulation of AI” (2025)
+<p>Special Issue Editor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a> on “Competition and Regulation of AI” (2025)
 <p>Deputy Editor for <a href="https://pubsonline.informs.org/journal/serv"</a>Service Science</a> (2024-2026)
 <p>Department Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> – Supply Chain Management Department (2022-2024)
 <p>Special Issue Editor for <a href="https://pubsonline.informs.org/page/serv/calls-for-papers"</a>Service Science on "Impact of AI on Service Design and Delivery"</a> (2024-2025)
