--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ Bensadoun Faculty Scholar <br /> -->
 Associate Member, <a href="https://www.mcgill.ca/ece/"</a>Electrical and Computer Engineering Department</a> (by courtesy) <br />
 Associate Academic Member, <a href="https://mila.quebec/en"</a>Mila</a> <br />
 Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> and <a href="https://www.gerad.ca/en"</a> GERAD </a> <br />
+VP of Publications for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> <br />
 Visiting Professor and Shubik Fellow, <a href="https://som.yale.edu/faculty-research/faculty-directory/maxime-cohen"</a> Yale School of Management</a>, <a href="https://www.yale.edu/"</a>Yale University</a> (2023-2024)<br />
 <br />
 <b>Chief AI Scientist</b> @<a href="https://www.ciussswestcentral.ca/"</a> CIUSSS West-Central Montreal (Jewish General Hospital) </a> <br />
